--- a/index.html
+++ b/index.html
@@ -75,5 +75,7 @@
     <footer>
         Prosto_biser.ru
     </footer>
+    <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script>
+<iframe src="https://forms.yandex.ru/u/62b7ecd6e9458e3b10bee7d6/?iframe=1" frameborder="0" name="ya-form-62b7ecd6e9458e3b10bee7d6" width="650"></iframe>
 </body>
 </html>
